--- a/environment/services/docker-compose.yml
+++ b/environment/services/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  api:
+    build:
+      context: ../app
+    container_name: aidna-api
+    ports:
+      - "${PORT_PREFIX}00:8000"
+    volumes:
+      - ../app:/app
+    restart: unless-stopped
+
   postgres:
     image: postgres:16-alpine
     container_name: aidna-postgres
